--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version : "3"
 
 services:
@@ -10,3 +11,21 @@ services:
       - "./app:/app"
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=supersecretpassword
+    depends_on:
+      - db
+
+  db:
+    image: postgres:10-alpine
+    environment:
+     - POSTGRES_DB=app
+     - POSTGRES_USER=postgres
+     - POSTGRES_PASSWORD=supersecretpassword
+#app service depends on database service
+#db service starts before the app service
+#install python pkg that allows django to communicate with docker
+#python manage.py wait_for_db && python manage.py migrate &&
