--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,22 +10,25 @@ services:
     volumes:
       - "./app:/app"
     command: >
-      sh -c "python manage.py runserver 0.0.0.0:8000"
-    environment:
-      - DB_HOST=db
-      - DB_NAME=app
-      - DB_USER=postgres
-      - DB_PASS=supersecretpassword
-    depends_on:
-      - db
+      sh -c "python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
+    # environment:
+    #   - DB_HOST=db
+    #   - DB_NAME=app
+    #   - DB_USER=postgres
+    #   - DB_PASS=supersecretpassword
+    # depends_on:
+    #   - db
 
-  db:
-    image: postgres:10-alpine
-    environment:
-     - POSTGRES_DB=app
-     - POSTGRES_USER=postgres
-     - POSTGRES_PASSWORD=supersecretpassword
+  # db:
+  #   image: postgres:10-alpine
+  #   environment:
+  #    - POSTGRES_DB=app
+  #    - POSTGRES_USER=postgres
+  #    - POSTGRES_PASSWORD=supersecretpassword
 #app service depends on database service
 #db service starts before the app service
 #install python pkg that allows django to communicate with docker
 #python manage.py wait_for_db && python manage.py migrate &&
+
+# in req.txt : psycopg2>=2.7.5,<2.8.0
